--- a/src/index.css
+++ b/src/index.css
@@ -1953,7 +1953,6 @@
                 flex-direction: column;
                 gap: 20px;
                 width: 100%;
-                margin-top: 20px;
             }
         }
         .register-section .singup-container{
@@ -1974,6 +1973,10 @@
             flex-direction: column;
             gap: 20px;
             width: 100%;
+        }
+        .register-section .register-form-container .title{
+            color: var(--text-color);
+            margin-top: 20px;
         }
 
             @media(max-width:349px){
@@ -3068,7 +3071,7 @@
 .contactUs-section{
     margin-bottom: 10px;
 }
-    @media(max-width:1063px){
+    @media(max-width:773px){
         .contactUs-section .custom-row{
             display:flex;
             flex-direction: column-reverse;
@@ -3095,7 +3098,7 @@
         flex-direction: column;
         align-items: center;
         justify-content: center;
-        padding: 20px 0;
+        padding: 20px;
         flex: 1;
     }
         .contactUs-section .left-side .some-text{
@@ -3161,8 +3164,5 @@
                     }
 
         .contactUs-section .img-container{
-            width: 50%;
-            display: flex;
-            align-items: center;
-            justify-content: center;
+            flex: 1;
         }
