--- a/src/index.css
+++ b/src/index.css
@@ -3052,3 +3052,134 @@
         font-size: 1.3rem;
         line-height: 1.5;
     }
+
+    /* ADMIN DASHBOARD */
+    .Layout {
+        display: flex;
+        flex: 1;
+      }
+      
+      .admin-layout {
+        width: 250px;
+        background-color: #f0f0f0;
+        padding: 20px;
+      }
+      
+      .sidebar {
+        position: fixed;
+        top: 0;
+        left: 0;
+        bottom: 0;
+        width: 250px;
+        background-color: #f0f0f0;
+        padding: 20px;
+        display: flex;
+        flex-direction: column;
+      }
+      
+      .sidebar .logo {
+        margin-bottom: 20px;
+      }
+      
+      .sidebar .logo img {
+        max-width: 100%;
+        height: auto;
+      }
+      
+      .sidebar-menu {
+        list-style-type: none;
+        padding: 0;
+        margin: 0;
+        flex-grow: 1;
+      }
+      
+      .sidebar-menu li {
+        margin-bottom: 10px;
+      }
+      
+      .sidebar-menu button {
+        display: block;
+        width: 100%;
+        padding: 8px;
+        background-color: transparent;
+        border: none;
+        text-align: left;
+        color: #333;
+        transition: color 0.3s ease;
+      }
+      button svg {
+        margin-right: 8px; /* Add right margin to create space between icon and text */
+      }
+
+      .sidebar-menu button a{
+        color: #435E39;
+      }
+      
+      .sidebar-menu button:hover {
+        color: #F6F6F6;
+        background-color: #435E39;
+        border-radius: 5px
+      }
+
+      .sidebar-menu button a:hover {
+        color: #F6F6F6;
+        background-color: #435E39;
+        border-radius: 5px
+      }
+      
+      .navbar {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 250px;
+        height: 60px;
+        background-color: #f0f0f0;
+        display: flex;
+        align-items: center;
+        padding: 0 20px;
+      }
+      
+      .search-bar form {
+        display: flex;
+        align-items: center;
+      }
+      
+      .search-bar input[type="text"] {
+        padding: 8px;
+        margin-right: 8px;
+        border: 1px solid #ccc;
+        border-radius: 4px;
+      }
+      
+      .search-bar button {
+        padding: 8px 12px;
+        background-color: #4caf50;
+        color: white;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+      
+      .user-info {
+        display: flex;
+        align-items: center;
+        margin-left: auto;
+      }
+      
+      .user-details {
+        display: flex;
+        align-items: center;
+      }
+      
+      .user-details .avatar {
+        width: 40px;
+        height: 40px;
+        border-radius: 50%;
+        margin-right: 8px;
+      }
+      
+      .content {
+        margin-top: 60px;
+        padding: 20px;
+      }
+      
