--- a/src/index.css
+++ b/src/index.css
@@ -3053,133 +3053,130 @@
         line-height: 1.5;
     }
 
-    /* ADMIN DASHBOARD */
-    .Layout {
-        display: flex;
-        flex: 1;
-      }
-      
-      .admin-layout {
-        width: 250px;
-        background-color: #f0f0f0;
-        padding: 20px;
-      }
-      
-      .sidebar {
-        position: fixed;
-        top: 0;
-        left: 0;
-        bottom: 0;
-        width: 250px;
-        background-color: #f0f0f0;
-        padding: 20px;
-        display: flex;
-        flex-direction: column;
-      }
-      
-      .sidebar .logo {
-        margin-bottom: 20px;
-      }
-      
-      .sidebar .logo img {
-        max-width: 100%;
-        height: auto;
-      }
-      
-      .sidebar-menu {
-        list-style-type: none;
-        padding: 0;
-        margin: 0;
-        flex-grow: 1;
-      }
-      
-      .sidebar-menu li {
-        margin-bottom: 10px;
-      }
-      
-      .sidebar-menu button {
-        display: block;
+/* ADMIN DASHBOARD */
+
+    .Layout{
         width: 100%;
-        padding: 8px;
-        background-color: transparent;
-        border: none;
-        text-align: left;
-        color: #333;
-        transition: color 0.3s ease;
-      }
-      button svg {
-        margin-right: 8px; /* Add right margin to create space between icon and text */
-      }
-
-      .sidebar-menu button a{
-        color: #435E39;
-      }
-      
-      .sidebar-menu button:hover {
-        color: #F6F6F6;
-        background-color: #435E39;
-        border-radius: 5px
-      }
-
-      .sidebar-menu button a:hover {
-        color: #F6F6F6;
-        background-color: #435E39;
-        border-radius: 5px
-      }
-      
-      .navbar {
-        position: fixed;
-        top: 0;
-        right: 0;
-        left: 250px;
-        height: 60px;
-        background-color: #f0f0f0;
-        display: flex;
-        align-items: center;
-        padding: 0 20px;
-      }
-      
-      .search-bar form {
-        display: flex;
-        align-items: center;
-      }
-      
-      .search-bar input[type="text"] {
-        padding: 8px;
-        margin-right: 8px;
-        border: 1px solid #ccc;
-        border-radius: 4px;
-      }
-      
-      .search-bar button {
-        padding: 8px 12px;
-        background-color: #4caf50;
-        color: white;
-        border: none;
-        border-radius: 4px;
-        cursor: pointer;
-      }
-      
-      .user-info {
-        display: flex;
-        align-items: center;
-        margin-left: auto;
-      }
-      
-      .user-details {
-        display: flex;
-        align-items: center;
-      }
-      
-      .user-details .avatar {
-        width: 40px;
-        height: 40px;
-        border-radius: 50%;
-        margin-right: 8px;
-      }
-      
-      .content {
-        margin-top: 60px;
         padding: 20px;
-      }
-      
+        height: 100vh;
+        display: flex;
+        gap: 10px;
+    }
+        .Layout .nav-and-outlet{
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+        }
+        .Layout .nav-and-outlet .outlet{
+            background-color: lightcoral;
+            height: 100%;
+        }
+            .Layout .nav-and-outlet .dashboard-nav{
+                width: 100%;
+                display: flex;
+                align-items: center;
+                justify-content: flex-end;
+            }
+                .Layout .nav-and-outlet .dashboard-nav .admin-user-container{
+                    display: flex;
+                    align-items: center;
+                    justify-content: flex-end;
+                }
+                    .Layout .nav-and-outlet .dashboard-nav .admin-user-container .admin-info p{
+                        margin: 0;
+                    }
+                    .Layout .nav-and-outlet .dashboard-nav .admin-user-container .admin-info .seller-name{
+                        font-size: 1rem;
+                    }
+                    .Layout .nav-and-outlet .dashboard-nav .admin-user-container .profile-container{
+                        height: 4rem;
+                        width: 4rem;
+                        margin-left: 10px;
+                    }
+
+        .Layout .side-nav{
+            display: flex;
+            flex-direction: column;
+            height: 100%;
+            width: 15rem;
+        }
+
+        .Layout .side-nav .navigation-links{
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: space-between;
+            height: 100%;
+            border: none;
+            border-top: 1px solid var(--color-fade);
+            margin-top: 10px;
+            padding-top: 10px;
+        }
+        
+            .Layout .side-nav .navigation-links .utilities{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: space-between;
+            }
+
+            .Layout .side-nav .navigation-links .main-navigation{
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 10px;
+                width: 100%;
+            }
+
+                .Layout .side-nav .navigation-links .main-navigation .links-icon{
+                    color: var(--text-color);
+                    padding-right: 10px;
+                }
+                .Layout .side-nav .navigation-links .main-navigation a{
+                    text-decoration: none;
+                    color: black;
+                    font-size: 1.3rem;
+                    display: flex;
+                    align-items: center;
+                    transition: all .3s;
+                    width: 100%;
+                    padding: 10px;
+                }
+                    .Layout .side-nav .navigation-links .main-navigation a:hover{
+                        background-color: var(--text-color);
+                        color: white;
+                    }
+                    .Layout .side-nav .navigation-links .main-navigation a:hover .links-icon{
+                        color: white;
+                    }
+
+        .Layout .side-nav .navigation-links .utilities{
+            border: none;
+            border-top: 1px solid var(--color-fade);
+            padding-top: 10px;
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            align-items: flex-start;
+            justify-content: flex-end;
+            gap: 10px;
+        }
+            .Layout .side-nav .navigation-links .utilities .links-icon{
+                padding-right: 10px;
+                color: var(--text-color);
+            }
+            .Layout .side-nav .navigation-links .utilities a{
+                font-size: 1.3rem;
+                text-decoration: none;
+                color: black;
+                width: 100%;
+                transition: all .3s;
+                padding: 10px;
+            }
+            .Layout .side-nav .navigation-links .utilities a:hover{
+                background-color: var(--text-color);
+                color: white;
+            }
+            .Layout .side-nav .navigation-links .utilities a:hover .links-icon{
+                color: white;
+            }
