--- a/src/index.css
+++ b/src/index.css
@@ -27,6 +27,15 @@
         --starColor:rgb(255,193,7);
         --color-fade:rgb(202, 202, 202);
     }
+/* not found page */
+    .not-found-section{
+        width: 100%;
+        height: 100vh;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
 /* reviews skeleton */
     .reviews-skeletom-card{
         /* background-color: #888; */
@@ -4436,31 +4445,22 @@
                         margin: 0;
                     }
 
-
-                    .finish-page-container {
-                        text-align: center;
-                        padding: 40px;
-                        height: 50vh;
-                        align-items: center;
-                      }
-                      
-                      .cart-image {
-                        width: 150px;
-                        
-                      }
-
-                      .button {
-                        display: inline-block;
-                        padding: 10px 20px;
-                        background-color: #435E39;
-                        color: #fff;
-                        text-decoration: none;
-                        border: none;
-                        border-radius: 5px;
-                        font-size: 16px;
-                        cursor: pointer;
-                      }
-
+    .finish-page-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        text-align: center;
+        padding-bottom: 20px;
+        gap: 20px;
+    }
+        .finish-page-container a{
+            text-decoration: none;
+            background-color: var(--text-color);
+            color: white;
+            padding: 10px;
+            border-radius: 10px;
+        }
 
     .messages-component{
         max-height: 10rem;
